<resources>
    <string name="app_name">Book Reviews</string>
    <string name="company_name">ZineddineBtc</string>
    <string name="from">from</string>
    <string name="next">Next</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_here">New here?</string>
    <string name="register_now">Register now!</string>
    <string name="by_creating_an_account_you_agree_on">By creating an account, you agree to our</string>
    <string name="invalid_input">Invalid input</string>
    <string name="login_failed">Login failed</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered?</string>
    <string name="invalid_email">Invalid email</string>
    <string name="insufficient_password">Password must contain more than 7 characters</string>
    <string name="register_failed">Registering failed</string>
    <string name="set_up_profile">Set up Profile</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="finish">Finish</string>
    <string name="no_photo_selected">No photo is selected</string>
    <string name="insufficient_username">Username must contain more than 4 characters</string>
    <string name="username_taken">Username taken</string>
    <string name="invalid_name">Invalid name</string>
    <string name="empty_bio">Empty bio</string>
    <string name="title_activity_core">CoreActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_reviews">My reviews</string>
    <string name="sign_out">Sign out</string>
    <string name="error">Error</string>
    <string name="search_hint">Search a book or a user</string>
    <string name="no_results">No results</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="users">Users</string>
    <string name="reviews">Reviews</string>
    <string name="book_title">Book title</string>
    <string name="time">time</string>
    <string name="review">Review</string>
    <string name="no_reviews_posted_yet_by_this_user">No reviews posted yet by this user</string>
    <string name="review">Review</string>
    <string name="search_a_book">Search a book</string>
    <string name="add">ADD</string>
    <string name="unspecified_title">Unspecified book title</string>
    <string name="unspecified_review">Unspecified review</string>
    <string name="no_reviews_made_by_this_profile_yet">No reviews made by this profile yet</string>
</resources>
