<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.core.ProfileActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photoIV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:src="@drawable/ic_account_circle_grey"
        app:civ_border_color="#ffffff"
        app:civ_border_width="2dp"/>
    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/usernameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="12sp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/bioTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:background="@drawable/white_background_border" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviewsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/noReviewsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_reviews_posted_yet_by_this_user"
        android:layout_gravity="center"/>
</LinearLayout>