<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.core.CreateBookReviewActivity">
    <LinearLayout
        android:id="@+id/writeReviewLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp">
        <LinearLayout
            android:id="@+id/reviewerLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photoIV"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#ffffff"
                android:src="@drawable/ic_account_circle_grey"
                app:civ_border_color="#ffffff"
                app:civ_border_width="2dp"
                android:layout_marginEnd="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/nameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/usernameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="12sp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>
        </LinearLayout>
        <EditText
            android:id="@+id/bookTitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_title"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_background_border"/>
        <EditText
            android:id="@+id/reviewTextTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:padding="10dp"
            android:hint="@string/review"
            android:gravity="start"
            android:background="@drawable/white_background_border"/>
    </LinearLayout>
    <TextView
        android:visibility="gone"
        android:id="@+id/errorTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Error"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="#ff0000"
        android:gravity="center"
        android:padding="5dp"/>
</RelativeLayout>