<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/bookTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:id="@+id/timeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:id="@+id/reviewTextTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_like_grey"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/likesCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:layout_marginEnd="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dislike_grey"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/dislikesCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
</LinearLayout>