<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:layout_marginTop="5dp">
    <LinearLayout
        android:id="@+id/evaluationLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_marginStart="5dp">
        <ImageView
            android:id="@+id/likesIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_like_grey"/>
        <TextView
            android:id="@+id/likesCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/dislikesCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"/>
        <ImageView
            android:id="@+id/dislikesIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dislike_grey"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/evaluationLL">
        <LinearLayout
            android:id="@+id/reviewerLL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_alignParentStart="true">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photoIV"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#ffffff"
                android:src="@drawable/ic_account_circle_grey"
                app:civ_border_color="#ffffff"
                app:civ_border_width="2dp"
                android:layout_marginEnd="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/nameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/usernameTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="12sp"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:id="@+id/timeTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/bookTitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/reviewTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
</RelativeLayout>